--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "rest-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "<div align=\"center\">",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch server.js"
@@ -20,6 +21,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.21.0",
+    "mongodb": "^6.9.0",
     "zod": "3.23.8"
   }
 }
